# lean.kak

./: .gitignore  Cargo.toml  flake.nix  readme.md  rust-toolchain.toml  rustfmt.toml  todo.md
kak-lean/: Cargo.toml
kak-lean/src/: main.rs
kakoune/: Cargo.toml
kakoune/kakscripts/: init-kakoune-rs-logging.kak
kakoune/src/: args.rs  error.rs  escape.rs  kakscripts.rs  lib.rs  logging.rs  macros.rs  tracing.rs
kakoune/src/kakscripts/: init-kakoune-rs-logging.kak
rc/: lean.kak  lsp.kak  syntax.kak
