[workspace]
resolver = "3"

members = ["kakoune"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
derive_more = { version = "2.0.1", features = ["constructor", "deref", "display"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "process"] }

[workspace.lints.clippy]
pedantic = { level = "deny" }
