[workspace]
resolver = "3"

members = ["kak-lean","kakoune"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = "4.5.53"
derive_more = "2.0.1"
indoc = "2.0.7"
nix = "0.30.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

kakoune = { path = "kakoune" }

[workspace.lints.clippy]
pedantic = { level = "deny" }
