[package]
name = "kakoune"
version = "0.1.0"
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["constructor", "deref", "display"] }
indoc.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "process"] }

[lints]
workspace = true
